--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!-- Write your HTML in this file -->
 <a Flatiron School>
-  Flatiron School hrefhttps://flatironschool.com
+  hrefhttps://flatironschool.com
 </a>
