--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
 <!-- Write your HTML in this file -->
-<a Flatiron School>
-  hrefhttps://flatironschool.com
+<a Flatiron School>hrefhttps://flatironschool.com
 </a>
