--- a/index.html
+++ b/index.html
@@ -1,3 +1,2 @@
 <!-- Write your HTML in this file -->
-<a Flatiron School>hrefhttps://flatironschool.com
-</a>
+<a Flatiron School>hrefhttps://flatironschool.com</a>
