--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <!-- Write your HTML in this file -->
-<a Flatiron School>hrefhttps://flatironschool.com</a>
+<ahref="https://flatironschool.com/">Flatiron School</a>
